# recast

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.changeset/: README.md  better-rivers-stand.md  config.json  tidy-brooms-carry.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  crash_report.yml  export_issue.yml  feature_request.yml  performance_issue.yml  recording_issue.yml  ux_ui_issue.yml
.github/workflows/: deploy-web.yml  release-desktop.yml  release-wallpapers.yml
apps/desktop/: DESIGN.md  package.json  tsconfig.json  vite.config.ts
apps/desktop/docs/: linux-native-recording.md
apps/desktop/src/: app.css  app.html
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: ffmpeg.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/audio/platform/: fallback.rs  windows.rs
apps/desktop/src-tauri/src/camera/platform/: fallback.rs  windows.rs
apps/desktop/src-tauri/src/capture/platform/: linux_wayland.rs  linux_x11.rs  mod.rs
apps/desktop/src-tauri/src/commands/: assets.rs  editor.rs  ffmpeg.rs  mod.rs  recording.rs  system.rs  types.rs
apps/desktop/src-tauri/src/cursor/: mod.rs  smoothing.rs
apps/desktop/src-tauri/src/encoder/: mod.rs
apps/desktop/src-tauri/src/project/: reader.rs  writer.rs
apps/desktop/src-tauri/src/recording/: mod.rs  pipeline.rs
apps/desktop/src-tauri/src/render/: cursor_anim.rs  cursor_export.rs  easing.rs  graph.rs  mask_export.rs  mod.rs  node_types.rs
apps/desktop/src/components/: corner-notifications.svelte  logo.svelte  whats-new-dialog.svelte
apps/desktop/src/constants/: app.ts  changelog.ts
apps/desktop/src/lib/: assets.ts  commands.ts  feature-flags.ts  ipc.ts  profiles.ts
apps/web/: DESIGN.md  package.json  svelte.config.js
apps/web/src/: app.css  app.html
assets/: manifest.json
scripts/: generate-latest-json.mjs  prepare-backgrounds.mjs  release-prepare.mjs  setup.ps1  setup.sh
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: editor.rs  ffmpeg.rs  system.rs  types.rs
src-tauri/src/cursor/: mod.rs  smoothing.rs
src-tauri/src/cursor/platform/: mod.rs  windows.rs
src-tauri/src/encoder/: mod.rs
src-tauri/src/project/: autosave.rs  mod.rs  storage.rs  writer.rs
src-tauri/src/recording/: mod.rs
src-tauri/src/render/: compose.rs  cursor_export.rs  decode.rs  frame.rs  graph.rs  mod.rs  node_types.rs  pipeline.rs
src-tauri/src/render/nodes/: background.rs  cursor_overlay.rs  mod.rs  zoom.rs
src/components/: FileList.svelte
src/components/editor/: BackgroundPicker.svelte  EditorSubToolbar.svelte  EditorToolbar.svelte  PlaybackControls.svelte  PropertiesPanel.svelte  Timeline.svelte  VideoPreview.svelte
src/components/layout/: SearchCommandMenu.svelte  app-sidebar.svelte  custom-titlebar.svelte
src/components/raycast/: ActionPanel.svelte  RaycastList.svelte  TopProgress.svelte  index.ts  types.ts
src/components/recast/: ActionPanel.svelte  ConfirmDialog.svelte  RecastList.svelte  RenameDialog.svelte  TopProgress.svelte  index.ts  types.ts
src/components/skeletons/: DashboardSkeleton.svelte  EditorSkeleton.svelte  SourceSelectorSkeleton.svelte
src/constants/: app.ts
src/lib/: commands.ts  ipc.ts  service-worker.ts
src/lib/stores/: command-palette.svelte.ts  editor-store.svelte.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/(app)/: +layout.svelte  +page.svelte
src/routes/camera-preview/: +page.svelte
src/routes/device-picker/: +page.svelte
src/routes/panel/: +page.svelte
src/routes/select/: +page.svelte
(+140 files in other folders)
