[package]
name = "recast"
version = "0.0.0-0"
description = "A light weight app to record your screen."
authors = ["kanak kholwal"]
license = ""
repository = "https://github.com/kanakkholwal/recast"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "recast_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
anyhow = "1.0"
crossbeam-queue = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
parking_lot = "0.12"
tauri = { version = "2.10.3", features = ["protocol-asset"] }
tauri-plugin-log = "2"
xcap = "0.8.3"
tokio = { version = "1.50.0", features = ["full"] }
image = "0.25"
base64 = "0.22"
tauri-plugin-dialog = "~2"
zip = { version = "2.2.0", default-features = false, features = ["deflate"] }
tauri-plugin-os = "2.3.2"
trash = "5.2"
tauri-plugin-opener = "2"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "json"] }
sha2 = "0.10"
futures-util = "0.3"
hex = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

# Native Wayland screen-capture stack. The portal (`ashpd`) negotiates
# permission and hands us a PipeWire node ID + file descriptor; `pipewire`
# attaches to that node and pulls BGRA frames. Both are Linux-only crates
# with C system-library dependencies (`libpipewire-0.3-dev`,
# `libdbus-1-dev`) — the build host needs those packages installed.
#
# `default-features = false` for ashpd so we don't pull in the gtk3/gtk4
# integration crates we don't need; we just want the raw portal client.
# The `tokio` feature picks the tokio runtime to match Tauri's own.
[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.10", default-features = false, features = ["tokio"] }
# Must match the major version `xcap` pulls in transitively (it uses
# pipewire for Wayland source enumeration). Two different major versions
# both `links = "pipewire-0.3"` → cargo-resolution failure. Keep this
# pinned to the same major as xcap or bump them together.
pipewire = "0.9"
# Pure-Rust X11 client. xcap also depends on x11rb so the version line
# is shared — keeping these in lockstep avoids resolution churn. The
# `shm` feature lets us upgrade to XShm later for the perf win without
# touching Cargo.toml again; we only use plain `GetImage` for MVP.
x11rb = { version = "0.13", features = ["shm"] }
